--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -2,6 +2,43 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.header {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: black;
+  color: white;
+  text-align: center;
+}
+
+.header h1 {
+  margin: 0px;
+  padding-top: 10px;
+}
+
+.header p {
+  margin: 0px;
+  font-style: italic;
+  padding-top: 5px;
+  padding-bottom: 10px;
+}
+
+.icon-group {
+  padding-bottom: 8px;
+}
+
+.icon {
+  background-color: black;
+  border: none;
+  color: white;
+  font-size: 18px;
+}
+a {
+  color: white;
+  text-decoration: none;
+}
+
 .navbar {
   overflow: hidden;
   background-color: #333;
