--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,9 +1,12 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
+  height: 100%;
+  width: 100%;
 }
 
 .header {
   width: 100%;
+  height: 115px;
   position: absolute;
   top: 0;
   left: 0;
@@ -34,21 +37,38 @@ body {
   color: white;
   font-size: 18px;
 }
-a {
+.header a,
+.nav-item a {
   color: white;
   text-decoration: none;
 }
 
 .navbar {
+  background-color: transparent;
+  text-align: center;
+  color: black;
+  position: fixed;
+  top: 105px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.nav-item {
+  background-color: black;
+  border: 1px solid white;
+  padding: 5px;
+}
+
+/* .navbar {
   overflow: hidden;
   background-color: #333;
   position: sticky;
   position: -webkit-sticky;
   top: 0;
-}
+} */
 
-/* Style the navigation bar links */
-.navbar a {
+/* .navbar a {
   float: left;
   display: block;
   color: white;
@@ -62,34 +82,32 @@ a {
   color: white;
 }
 
-/* Column container */
 .row {
-  display: -ms-flexbox; /* IE10 */
+  display: -ms-flexbox; 
   display: flex;
-  -ms-flex-wrap: wrap; /* IE10 */
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
 
-/* Create two unequal columns that sits next to each other */
-/* Sidebar/left column */
+
 .side {
-  -ms-flex: 20%; /* IE10 */
+  -ms-flex: 20%; 
   flex: 20%;
   background-color: white;
   padding: 20px;
 }
 
-/* Main column */
+
 .main {
-  -ms-flex: 70%; /* IE10 */
+  -ms-flex: 70%;
   flex: 70%;
   background-color: #f1f1f1;
   padding: 20px;
 }
 
-/* Footer */
+
 .footer {
   padding: 20px;
   text-align: center;
   background: black;
-}
+} */
