--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -2,12 +2,12 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   height: 100%;
   width: 100%;
+  margin: 0px;
 }
 
 .header {
   width: 100%;
   height: 115px;
-  position: absolute;
   top: 0;
   left: 0;
   background-color: black;
@@ -47,7 +47,7 @@ body {
   background-color: transparent;
   text-align: center;
   color: black;
-  position: fixed;
+  position: absolute;
   top: 105px;
   width: 100%;
   display: flex;
@@ -58,6 +58,40 @@ body {
   background-color: black;
   border: 1px solid white;
   padding: 5px;
+}
+
+.content {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.side {
+  flex: 20%;
+  height: 1000px;
+  padding: 20px;
+}
+
+.side h2,
+h3 {
+  color: #3e6270;
+}
+
+.side p {
+  color: #619ab0;
+}
+
+.main {
+  background-color: #3e6270;
+  flex: 70%;
+  padding: 20px;
+}
+
+.main h2 {
+  color: #76bbd6;
+}
+
+.main p {
+  color: white;
 }
 
 /* .navbar {
