basic items for page layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,20 @@
-soon :)
+<div class="head d-flex align-items-end justify-content-center">
+  <p class="fs-1 text-center">Hey, I'm Keegan</p>
+</div>
+<div class="sub-head d-flex align-items-center justify-content-center">
+  <p class="fs-3 text-center">Frontend Developer and Digital Designer</p>
+</div>
+<div class="main-content d-flex flex-wrap justify-content-evenly">
+  <div class="info-section">
+    <p class="fs-4 text-center">
+      Intermediate Angular Developer with 3+ years experience building GIS-based
+      web applications.
+    </p>
+  </div>
+  <div class="info-section">
+    <p class="fs-4 text-center">
+      Currently a UI Engineer helping accelerate the transition to autonomous
+      farming at Verge Agriculture
+    </p>
+  </div>
+</div>
