--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,3 +18,23 @@
     </p>
   </div>
 </div>
+<div #buttons class="d-flex flex-wrap justify-content-evenly">
+  <button mat-flat-button color="primary" class="social-button m-2">
+    Github
+  </button>
+  <button mat-flat-button color="primary" class="social-button m-2">
+    LinkedIn
+  </button>
+  <button mat-flat-button color="accent" class="social-button m-2">
+    Send me an Email
+  </button>
+  <button mat-flat-button color="accent" class="social-button m-2">
+    Download my CV
+  </button>
+  <button mat-flat-button color="warn" class="social-button m-2">
+    Instagram
+  </button>
+  <button mat-flat-button color="warn" class="social-button m-2">
+    Discord
+  </button>
+</div>
