--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
+<div
+  class="wip-warning position-absolute m-4 p-2"
+  matBadge="1"
+  matBadgeSize="large"
+  matBadgeColor="warn"
+>
+  This site is a
+  <span class="fw-bold">Work In Progress</span>
+  :)
+</div>
 <div class="head d-flex align-items-end justify-content-center">
   <p class="fs-1 text-center">Hey, I'm Keegan</p>
 </div>
