--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,21 +30,24 @@
 </div>
 <div #buttons class="d-flex flex-wrap justify-content-evenly">
   <button mat-flat-button color="primary" class="social-button m-2">
-    Github
+    <fa-icon [icon]="faGithub" class="me-2"></fa-icon>Github
+    <span class="small">@keeganosler</span>
   </button>
   <button mat-flat-button color="primary" class="social-button m-2">
-    LinkedIn
+    <fa-icon [icon]="faLinkedin" class="me-2"></fa-icon>LinkedIn
   </button>
-  <button mat-flat-button color="accent" class="social-button m-2">
-    Send me an Email
+  <button mat-flat-button color="primary" class="social-button m-2">
+    <fa-icon [icon]="faEnvelope" class="me-2"></fa-icon>Send me an Email
   </button>
-  <button mat-flat-button color="accent" class="social-button m-2">
-    Download my CV
+  <button mat-flat-button color="primary" class="social-button m-2">
+    <fa-icon [icon]="faDownload" class="me-2"></fa-icon>Download my CV
   </button>
-  <button mat-flat-button color="warn" class="social-button m-2">
-    Instagram
+  <button mat-flat-button color="primary" class="social-button m-2">
+    <fa-icon [icon]="faInstagram" class="me-2"></fa-icon>Instagram
+    <span class="small">@keegan_osler</span>
   </button>
-  <button mat-flat-button color="warn" class="social-button m-2">
-    Discord
+  <button mat-flat-button color="primary" class="social-button m-2">
+    <fa-icon [icon]="faDiscord" class="me-2"></fa-icon>Discord
+    <span class="small">#keeganosler</span>
   </button>
 </div>
