--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,26 +8,16 @@
   <span class="fw-bold">Work In Progress</span>
   :)
 </div>
-<div class="head d-flex align-items-end justify-content-center">
+<div class="head d-flex align-items-end justify-content-center mb-3">
   <p class="fs-1 text-center">Hey, I'm Keegan</p>
 </div>
-<div class="sub-head d-flex align-items-center justify-content-center">
-  <p class="fs-3 text-center">Frontend Developer and Digital Designer</p>
+<div class="d-flex align-items-center justify-content-center mb-3">
+  <p class="fs-4 text-center">Frontend Developer | Digital Designer</p>
 </div>
-<div class="main-content d-flex flex-wrap justify-content-evenly">
-  <div class="info-section">
-    <p class="fs-4 text-center">
-      Intermediate Angular Developer with 3+ years experience building GIS-based
-      web applications.
-    </p>
-  </div>
-  <div class="info-section">
-    <p class="fs-4 text-center">
-      Currently a UI Engineer helping accelerate the transition to autonomous
-      farming at Verge Agriculture
-    </p>
-  </div>
-</div>
+<p class="text-muted text-center fst-italic">
+  Currently a UI Engineer helping accelerate the transition to autonomous
+  farming at <a href="#">Verge Agriculture</a>
+</p>
 <div #buttons class="d-flex flex-wrap justify-content-evenly">
   <button mat-flat-button color="primary" class="social-button m-2">
     <fa-icon [icon]="faGithub" class="me-2"></fa-icon>Github
