--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,10 +9,16 @@
   :)
 </div>
 <div class="head d-flex align-items-end justify-content-center mb-3">
-  <p class="fs-1 text-center">Hey, I'm Keegan</p>
+  <p class="fs-1 text-center fw-bold">
+    Hey, I'm Keegan<mat-icon class="ms-2" inline
+      ><fa-icon [icon]="faCode"></fa-icon
+    ></mat-icon>
+  </p>
 </div>
 <div class="d-flex align-items-center justify-content-center mb-3">
-  <p class="fs-4 text-center">Frontend Developer | Digital Designer</p>
+  <p class="fs-4 text-center" style="color: #c2185b">
+    Frontend Developer | Digital Designer
+  </p>
 </div>
 <p class="text-muted text-center fst-italic">
   Currently a UI Engineer helping accelerate the transition to autonomous
