--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
   </p>
 </div>
 <div class="d-flex align-items-center justify-content-center mb-3">
-  <p class="fs-4 text-center" style="color: #c2185b">
+  <p class="fs-4 text-center" style="color: #00838f">
     Frontend Developer | Digital Designer
   </p>
 </div>
