--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@ $light-app-theme: mat-light-theme(
   (
     color: (
       primary: mat-palette($mat-cyan, 800),
-      accent: mat-palette($mat-cyan, A200, A100, A400),
+      accent: mat-palette($mat-blue-gray, 300),
       warn: mat-palette($mat-red),
     ),
   )
@@ -16,8 +16,8 @@ $light-app-theme: mat-light-theme(
 $dark-app-theme: mat-dark-theme(
   (
     color: (
-      primary: mat-palette($mat-cyan),
-      accent: mat-palette($mat-cyan, A200, A100, A400),
+      primary: mat-palette($mat-cyan, 200),
+      accent: mat-palette($mat-blue-gray, 100),
       warn: mat-palette($mat-red),
     ),
   )
