update light mode scheme

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,11 +16,11 @@
   </p>
 </div>
 <div class="d-flex align-items-center justify-content-center mb-3">
-  <p class="fs-4 text-center" style="color: #00838f">
-    Frontend Developer | Digital Designer
+  <p class="tagline fs-4 fw-bold text-center">
+    Frontend Developer <span class="tagline-divider">|</span> Digital Designer
   </p>
 </div>
-<p class="text-muted text-center fst-italic">
+<p class="text-center fst-italic">
   Currently a UI Engineer helping accelerate the transition to autonomous
   farming at <a href="#">Verge Agriculture</a>
 </p>
