update main icon

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
 <div class="head d-flex align-items-end justify-content-center mb-3">
   <p class="fs-1 text-center fw-bold">
     Hey, I'm Keegan<mat-icon class="ms-2" inline
-      ><fa-icon [icon]="faCode"></fa-icon
+      ><fa-icon [icon]="faGlasses"></fa-icon
     ></mat-icon>
   </p>
 </div>
