--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
-.wip-warning {
-  border: 2px solid #b0bec5;
-  border-radius: 5px;
+.theme-toggler {
+  border: 1px solid #b0bec5;
+  border-radius: 3px;
 }
 
 .head {
@@ -10,11 +10,4 @@
 button {
   width: 200px;
   height: 50px;
-}
-
-.tagline {
-  color: #00838f;
-}
-.tagline-divider {
-  color: #263238;
 }
