upgrade color scheme

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
 </div>
 <p class="text-center fst-italic">
   Currently a UI Engineer helping accelerate the transition to autonomous
-  farming at <a href="https://vergeag.com/">Verge Agriculture</a>
+  farming at <a href="https://vergeag.com/"><b>Verge Agriculture</b></a>
 </p>
 <div class="w-100 d-flex justify-content-center">
   <div
