tweak padding and links

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,7 +33,7 @@
     Frontend Developer & UI Engineer
   </p>
 </div>
-<p class="text-center">
+<p class="text-center ps-2 pe-2">
   <i
     >Currently helping accelerate the transition to autonomous farming at
     <a href="https://vergeag.com/"><b>Verge Agriculture</b></a></i
