update icon color

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
 <div class="head d-flex align-items-end justify-content-center mb-3">
   <p class="header fs-1 text-center fw-bold">
     Hey, I'm Keegan<mat-icon class="ms-2" inline
-      ><fa-icon class="pink-icon" [icon]="faGlasses"></fa-icon
+      ><fa-icon class="blue-icon" [icon]="faGlasses"></fa-icon
     ></mat-icon>
   </p>
 </div>
@@ -66,11 +66,10 @@
       </div>
     </button>
     <!-- <button mat-flat-button color="primary" class="social-button m-2">
-    <fa-icon [icon]="faEnvelope" class="me-2"></fa-icon>Send me an Email
-  </button>
-  <button mat-flat-button color="primary" class="social-button m-2">
-    <fa-icon [icon]="faDownload" class="me-2"></fa-icon>Download my CV
-  </button> -->
+      <fa-icon [icon]="faEnvelope" class="fs-4 pink-icon me-2"></fa-icon>Send me
+      an Email
+    </button> -->
+
     <button
       mat-flat-button
       color="primary"
@@ -93,5 +92,11 @@
         >Discord
       </div>
     </button>
+    <!-- <a
+      ><button mat-flat-button color="primary" class="social-button m-2">
+        <fa-icon [icon]="faDownload" class="fs-4 pink-icon me-2"></fa-icon
+        >Download my Resume
+      </button></a
+    > -->
   </div>
 </div>
