--- a/src/scss/theme/_colors.scss
+++ b/src/scss/theme/_colors.scss
@@ -1,16 +1,16 @@
 @import "~@angular/material/theming";
 
 $surface-palette: (
-  50: #e0e0e0,
-  100: #b3b3b3,
-  200: #808080,
-  300: #4d4d4d,
-  400: #262626,
-  500: #000000,
-  600: #000000,
-  700: #000000,
-  800: #000000,
-  900: #000000,
+  50: #ffffff,
+  100: #f5f5f5,
+  200: #eeeeee,
+  300: #e0e0e0,
+  400: #bdbdbd,
+  500: #9e9e9e,
+  600: #757575,
+  700: #545454,
+  800: #363636,
+  900: #161616,
   A100: #a6a6a6,
   A200: #8c8c8c,
   A400: #737373,
@@ -102,3 +102,12 @@ $blue-palette: (
 );
 
 $warn: mat-palette($mat-red);
+
+$pink-500: map-get($pink-palette, 500);
+
+$surface-50: map-get($surface-palette, 50);
+$surface-200: map-get($surface-palette, 200);
+$surface-300: map-get($surface-palette, 300);
+$surface-400: map-get($surface-palette, 400);
+$surface-600: map-get($surface-palette, 600);
+$surface-900: map-get($surface-palette, 900);
