--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,10 +60,9 @@
         <fa-icon [icon]="faLinkedin" class="fs-4 me-2"></fa-icon>LinkedIn
       </div>
     </button>
-    <button mat-flat-button color="primary" class="social-button m-2">
+    <!-- <button mat-flat-button color="primary" class="social-button m-2">
       <fa-icon [icon]="faEnvelope" class="fs-4 me-2"></fa-icon>Send me an Email
-    </button>
-
+    </button> -->
     <button
       mat-flat-button
       color="primary"
@@ -84,10 +83,10 @@
         <fa-icon [icon]="faDiscord" class="fs-4 me-2"></fa-icon>Discord
       </div>
     </button>
-    <a
+    <!-- <a
       ><button mat-flat-button color="primary" class="social-button m-2">
         <fa-icon [icon]="faDownload" class="fs-4 me-2"></fa-icon>Download my DV
       </button></a
-    >
+    > -->
   </div>
 </div>
