--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,6 +35,15 @@
     <a href="https://vergeag.com/"><b>Verge Agriculture</b></a></i
   >
 </p>
+<p class="text-center ps-2 pe-2">
+  <i
+    >Read my latest tutorial:
+    <a
+      href="https://medium.com/@oslerkeegan/access-an-angular-app-outside-localhost-ab64da582fce"
+      ><b>Access an Angular App outside localhost</b></a
+    ></i
+  >
+</p>
 <div class="w-100 d-flex justify-content-center">
   <div
     #buttons
