fix icon-related bugs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="position-absolute m-2">
+<div class="position-absolute m-2 d-flex align-items-center">
   <mat-icon
     class="me-2"
     [ngClass]="{
@@ -22,20 +22,28 @@
 <div class="head d-flex align-items-end justify-content-center mb-3">
   <p class="header fs-1 text-center fw-bold">
     Hey, I'm Keegan<mat-icon inline class="ms-2 primary-icon"
-      ><fa-icon [icon]="faGlasses"></fa-icon
+      ><fa-icon class="pt-4" [icon]="faGlasses"></fa-icon
     ></mat-icon>
   </p>
 </div>
 <div class="d-flex align-items-center justify-content-center mb-3">
   <p class="fs-4 fw-bold text-center">Frontend Developer & UI Engineer</p>
 </div>
-<p class="text-center ps-2 pe-2">
+<p class="text-center ps-2 pe-2 mb-0">
   <i
-    >Currently helping accelerate the transition to autonomous farming at
+    >I'm helping accelerate the transition to autonomous farming at
     <a href="https://vergeag.com/"><b>Verge Agriculture</b></a></i
   >
 </p>
-
+<p class="text-center pt-2 ps-2 pe-2">
+  <i
+    >Read my latest tutorial on how to
+    <a
+      href="https://medium.com/@oslerkeegan/access-an-angular-app-outside-localhost-ab64da582fce"
+      ><b>Access an Angular App outside localhost</b></a
+    ></i
+  >
+</p>
 <div class="w-100 d-flex justify-content-center">
   <div
     #buttons
@@ -112,12 +120,3 @@
     > -->
   </div>
 </div>
-<p class="text-center pt-2 ps-2 pe-2">
-  <i
-    >Read my latest tutorial on how to
-    <a
-      href="https://medium.com/@oslerkeegan/access-an-angular-app-outside-localhost-ab64da582fce"
-      ><b>Access an Angular App outside localhost</b></a
-    ></i
-  >
-</p>
